Maps: fix CI red (SpotBugs, javadocs, prose, iOS/watchOS native)
Address all failing checks on the modern-maps PR:

- SpotBugs (build-test): replace Number ctors with valueOf across the
  maps + maps/vector classes (DM_NUMBER_CTOR/DM_FP_NUMBER_CTOR/
  DM_BOOLEAN_CTOR); rewrite LatLng longitude wrap with modulo instead
  of a float loop (FL_FLOATS_AS_LOOP_COUNTERS); make
  VectorMapEngine.tileSize static (SS_SHOULD_BE_STATIC); reference the
  enclosing instance in BundledTileSource's fetch Runnable
  (SIC_INNER_SHOULD_BE_STATIC_ANON, also fixes the latent getClass()
  resource-resolution); exclude EQ_DOESNT_OVERRIDE_EQUALS for the
  one-shot HttpTileSource ConnectionRequest subclasses.
- build-javadocs: add package-info.java for com.codename1.maps.spi and
  com.codename1.maps.vector (flagged by check-package-info.sh).
- Developer guide prose: contractions / "for example" / drop "freely"
  for Vale; add basemap/basemaps/Mapbox to the LanguageTool accept list.
- build-ios / build-ios-metal / build-mac-native: the native screenshot
  suite hung on NativeMap creation because AppleMapProvider.m's
  nativeCreate did dispatch_sync to the main queue, which deadlocks when
  the CN1 iOS EDT already runs on the main thread. Create inline when
  already on the main thread.
- build-ios-watch: MKMapView and the overlay renderers are unavailable
  on watchOS; guard the MapKit impl with TARGET_OS_WATCH and provide
  linkable no-op stubs (nativeCreate returns 0 -> NativeMap falls back
  to the vector MapView).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>